--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.28
 pydantic==2.6.1
 pydantic-settings==2.1.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 pyjwt==2.8.0
 python-multipart==0.0.9
 python-dotenv==1.0.0
