docs: add architecture overview and backlog; clarify llm retry

--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,13 @@ BIDDING_ASSISTANT_LLM_PROVIDER=stub
 BIDDING_ASSISTANT_LLM_MODEL=gpt-4o-mini
 BIDDING_ASSISTANT_LLM_API_KEY=dummy-key
 BIDDING_ASSISTANT_LLM_BASE_URL=https://api.openai.com/v1
+BIDDING_ASSISTANT_LLM_TIMEOUT=0  # 0=无限等待，避免长任务超时
 
 # SplitWorkload / Costing module model configuration (reuse same key if需要)
 SPLITWORKLOAD_MODEL_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 SPLITWORKLOAD_MODEL_PATH=qwen3-max
 SPLITWORKLOAD_MODEL_API_KEY=dummy-key
-SPLITWORKLOAD_MODEL_TIMEOUT=60
+SPLITWORKLOAD_MODEL_TIMEOUT=0    # 0=无限等待，DashScope 长任务建议自配超时告警
 
 # Optional: allow local frontend to call backend without extra CORS setup
 # SA_CORS_ORIGINS=["http://localhost:3000","http://127.0.0.1:5500"]
