feat: add wechat login flow

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ SA_JWT_SECRET=please-change-me
 SA_API_V1_PREFIX=/api
 SA_DATABASE_URL=sqlite:///./sales_assistant.db
 
+# WeChat mini program credentials (for wechat-login)
+SA_WECHAT_APP_ID=your-miniapp-appid
+SA_WECHAT_APP_SECRET=your-miniapp-secret
+
 # Bidding assistant LLM configuration (shared key)
 BIDDING_ASSISTANT_LLM_PROVIDER=stub
 BIDDING_ASSISTANT_LLM_MODEL=gpt-4o-mini
