--- a/frontend/miniapp/project.config.json
+++ b/frontend/miniapp/project.config.json
@@ -12,7 +12,16 @@
       "outputPath": ""
     },
     "useCompilerPlugins": false,
-    "minifyWXML": true
+    "minifyWXML": true,
+    "compileWorklet": false,
+    "uploadWithSourceMap": true,
+    "packNpmManually": false,
+    "minifyWXSS": true,
+    "disableUseStrict": false,
+    "condition": false,
+    "swc": false,
+    "disableSWC": true,
+    "urlCheck": false
   },
   "compileType": "miniprogram",
   "simulatorPluginLibVersion": {},
@@ -21,5 +30,6 @@
     "include": []
   },
   "appid": "wxa7a547d84de3f72a",
-  "editorSetting": {}
+  "editorSetting": {},
+  "libVersion": "3.10.3"
 }
