--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.110.0
 uvicorn[standard]==0.27.1
 sqlalchemy==2.0.28
-pydantic==2.6.1
+pydantic>=2.6.1
 pydantic-settings==2.1.0
 passlib[bcrypt]==1.7.4
 bcrypt==3.2.2
@@ -18,7 +18,7 @@ jinja2==3.1.4
 python-docx==0.8.11
 pdfminer.six==20231228
 PyPDF2==3.0.1
-pillow==10.2.0
+pillow>=10.2.0
 pytesseract==0.3.10
 requests==2.32.3
 pycryptodome==3.20.0
