--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,15 +8,15 @@ bcrypt==3.2.2
 pyjwt==2.8.0
 python-multipart==0.0.9
 python-dotenv==1.0.0
-pandas==2.2.0
-openpyxl==3.1.2
-numpy==1.26.3
-httpx==0.26.0
-cachetools==5.3.2
-tenacity==8.2.3
-jinja2==3.1.4
-python-docx==0.8.11
-pdfminer.six==20231228
+pandas>=2.2.0
+openpyxl>=3.1.2
+numpy>=1.26.3
+httpx>=0.26.0
+cachetools>=5.3.2
+tenacity>=8.2.3
+jinja2>=3.1.4
+python-docx>=0.8.11
+pdfminer.six>=20231228
 PyPDF2==3.0.1
 pillow>=10.2.0
 pytesseract==0.3.10
